# Pfm-Util

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  DEV_SETUP.MD  LICENSE  Makefile  README.rst  RELEASING.MD  other_make  project.sh  pyproject.toml  requirements.txt  requirements_dev.txt  run.sh  setup.cfg  setup.cfg.bak  setup.py.bak  tox.ini  tox.ini.bak
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  pfm_util.argparse_utilities.rst  pfm_util.collection_utilities.rst  pfm_util.datetime_utilities.rst  pfm_util.file_hash.rst  pfm_util.file_utilities.rst  pfm_util.list_utilities.rst  pfm_util.math_utilities.rst  pfm_util.number_utilities.rst  pfm_util.rst  pfm_util.string_utilities.rst  pfm_util.uuid_utilities.rst  usage.rst
scripts/: clean_develop_venv.sh  develop_venv.sh  run.sh
src/pfm_util/: __init__.py
src/pfm_util/argparse/: misc.py
src/pfm_util/argparse_utilities/: argparse_utilities.py
src/pfm_util/async_lib/: http_queue.py  http_queue_2.py
src/pfm_util/collection/: misc.py  search.py  sort.py
src/pfm_util/collection_utilities/: collection_utilities.py  misc.py  search.py
src/pfm_util/datetime/: calendar.py  calendar_maker.py  datetime.py  timedelta.py  timedelta_util.py
src/pfm_util/datetime_utilities/: calendar_maker.py  datetime_utilities.py  timedelta_util.py  timer.py
src/pfm_util/file/: csv.py  csv_record.py  eve_market_orders.py  path.py  read_write.py
src/pfm_util/file_hash/: __init__.py  file_hash.py
src/pfm_util/file_utilities/: csv_utililities.py  eve_market_orders.py  file_utilities.py  pdf_text_grab.py
src/pfm_util/http_async_queue/: async_queue.py  async_queue_2.py
src/pfm_util/list_utilities/: list_utilities.py
src/pfm_util/math/: calculations.py
src/pfm_util/math_utilities/: calculations.py
src/pfm_util/number_utilities/: calculations.py
src/pfm_util/parsing/: text_chunk_parser.py
src/pfm_util/sqliteUtils/: sqliteUtils.py
src/pfm_util/string_utilities/: str_util.py
src/pfm_util/uuid/: uuid_util.py
src/pfm_util/uuid_utilities/: uuid_util.py
tests/: __init__.py  test_pfm_util.py
tests/pfm_util/async_lib/: http_queue_2_test.py  http_queue_test.py
tests/pfm_util/collection/: misc_test.py  search_test.py  sort_test.py
tests/pfm_util/collection_utilities/: test_collection_utilities.py
tests/pfm_util/datetime/: calendar_maker_test.py  calendar_test.py  datetime_test.py  datetime_utilities_test.py  timedelta_test.py  timedelta_util_test.py  timer_test.py
tests/pfm_util/datetime_utilities/: test_calendar_maker.py  test_datetime_utilities.py  test_timedelta_util.py  test_timer.py
tests/pfm_util/file/: conftest.py  csv_utilities_test.py  file_test.py  path_test.py  read_write_test.py
tests/pfm_util/file_hash/: file_hash_test.py  test_file_hash.py
tests/pfm_util/file_utilities/: test_file_utilities.py
tests/pfm_util/http_async_queue/: async_queue_2_test.py  async_queue_test.py  test_async_queue.py  test_async_queue_2.py
(+33 files in other folders)
