[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
src_paths = ["src", "test"]



# [tool.coverage.run]
# branch = True

# [tool.coverage.report]
# # Regexes for lines to exclude from consideration
# exclude_lines =
#     # Have to re-enable the standard pragma
#     pragma: no cover

#     # Don't complain about missing debug-only code:
#     def __repr__
#     if self\.debug

#     # Don't complain if tests don't hit defensive assertion code:
#     raise AssertionError
#     raise NotImplementedError

#     # Don't complain if non-runnable code isn't run:
#     if 0:
#     if __name__ == .__main__.:

# ignore_errors = True

# [tool.coverage.html]
# directory = coverage_html_report
